atualização 1 - adicionando logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
 <body>
 
+	
 	<div class="container d-flex justify-content-center align-items-center">		
+	    <img src="img/logo.png" alt="Git" title="Git" width="400px">
 		<h1><span class="badge bg-secondary">Testando Hospedagem - GITHUB Pages</span></h1>
 	</div>
 
